<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired League</string>
    <string name="womens">womens</string>
    <string name="mens">mens</string>
    <string name="co_ed">co-ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="get_started">GET STARTED</string>
    <string name="i_m_a">I\'m a:</string>
    <string name="beginner">beginner</string>
    <string name="baller">baller</string>
    <string name="finish">FINISH</string>
    <string name="search_text">Looking for co-ed beginner near you...</string>
</resources>