<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background_image"
            app:srcCompat="@drawable/desiredleaguebg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/swooshlogo"
            android:scaleType="fitCenter"
            android:rotationY="2"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="48dp">

        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton3"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@color/white"
                android:textOff="@string/womens"
                android:textOn="@string/womens"
                tools:ignore="VisualLintButtonSize"/>

        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton5"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textOff="@string/mens"
                android:textOn="@string/mens"
                android:background="@drawable/swoosh_toggle"
                tools:ignore="VisualLintButtonSize"/>

        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton4"
                android:textColor="@color/white"
                android:textOff="@string/co_ed"
                android:textOn="@string/co_ed"
                android:background="@drawable/swoosh_toggle"
                tools:ignore="VisualLintButtonSize"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/swoosh_button"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize"/>

</androidx.constraintlayout.widget.ConstraintLayout>