<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.WelcomeActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background_image"
            app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView3"
            android:scaleType="fitCenter"
            android:rotationY="2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/textView"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="46sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            tools:ignore="TextSizeCheck"/>

    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="217dp"
            android:layout_height="46dp"
            android:id="@+id/textView3"
            android:textColor="@color/white"
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:singleLine="false"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            tools:ignore="TextSizeCheck"/>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/swoosh_button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" tools:ignore="VisualLintButtonSize"/>

</androidx.constraintlayout.widget.ConstraintLayout>