<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.SkillActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background_image"
            app:srcCompat="@drawable/beginnerballerbg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/swooshlogo"
            android:scaleType="fitCenter"
            android:rotationY="2"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            tools:ignore="ImageContrastCheck"/>

    <TextView
            android:text="@string/i_m_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/beginnerBtn"
                android:layout_weight="1"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@color/white"
                android:textOff="@string/beginner"
                android:textOn="@string/beginner"
                android:layout_marginEnd="16dp"
                tools:ignore="VisualLintButtonSize"
                android:onClick="onBeginnerClicked"/>

        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ballerBtn"
                android:layout_weight="1"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@color/white"
                android:text="@string/baller"
                android:textOff="@string/baller"
                android:textOn="@string/baller"
                android:layout_marginStart="16dp"
                tools:ignore="VisualLintButtonSize"
                android:onClick="onBallerClicked"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishLeagueBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:background="@drawable/swoosh_button"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize"
            android:onClick="finishLeague"/>

</androidx.constraintlayout.widget.ConstraintLayout>